fixed nav bar overlap

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -52,4 +52,5 @@ li button:hover {
   font-size: 20px;
   color: #2e87e0;
   margin: 20px;
+  white-space: nowrap;
 }
