--- a/css/pages.css
+++ b/css/pages.css
@@ -1,5 +1,5 @@
 #main {
-  margin-top: 70px;
+  margin-top: 120px;
   height: 100%;
   padding-bottom: 80px;
 }
